Added changes from week 5

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ lesson 1 outline
 swift_logo.jpg
 temp/
 toDoList/toDoList.xcodeproj/xcuserdata/pkant.xcuserdatad/xcdebugger/
-toDoList/toDoList.xcodeproj/project.xcworkspace/xcuserdata/pkant.xcuserdatad/UserInterfaceState.xcuserstate
+UITableViewController anatomy.png
+toDoList/toDoList.xcodeproj/project.xcworkspace/xcuserdata/
